--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,109 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,700;1,700&family=Lekton:ital,wght@0,400;0,700;1,400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Give+You+Glory&display=swap');
+
+body{
+    background-color:#1E1E1E;
+}
+
+*{
+    box-sizing: border-box;
+}
+
+.page-title{
+    color:rgb(211, 107, 107);
+}
+
+.practice-problems {
+    display: inline-flex;
+    gap:150px;
+}
+
+.similar-font,
+.find-grid,
+.style-choice {
+    width:800px;
+    height:800px;
+}
+.similar-font{
+    background-color:#3D3E61;
+    color:#fff;
+    font-family: "Lekton",sans-serif;
+        font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    padding: 100px;
+}
+
+.similar-font-headline{
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    color:#FFBF43;
+    text-transform: uppercase;
+    font-size: 64px;
+    line-height: 1;
+}
+
+.find-grid{
+    background-color: #FFFF;
+    color:#003053;
+    font-family: "Crimson Text";
+    font-weight: 400;
+    display: grid;
+    grid-template-columns: repeat(8,100px);
+    grid-template-rows: repeat(8,100px);
+}
+
+.find-grid-headline{
+    font-family: "IBM Plex Mono", monospace;
+    font-weight: 700;
+    font-style: bold;
+    text-transform: lowercase;
+    font-size:64px;
+    grid-column: 2 / span 6;
+    grid-row: 2 / span 2;
+    line-height: 1;
+}
+
+.find-grid-content{
+    grid-column: 2 / span 6;
+    grid-row: 5 / span 2;
+    columns: 2;
+}
+
+.find-grid-content p {
+    break-inside: avoid;
+    margin-top: 0;
+}
+
+.style-choice{
+    background: url('../images/soft-wallpaper.png') rgb(62, 50, 50) 50% / cover no-repeat;
+    padding:100px;
+    color:#FFFF
+}
+
+.content-container{
+    transform: rotate(-15deg);
+}
+
+.style-choice-headline{
+    margin:100px 0;
+    font-family: "Give You Glory", cursive;
+    font-weight: 400;
+    font-size: 64px;
+    text-transform: lowercase;
+    line-height: 1;
+    gap:128.2px;
+}
+
+.style-choice-content{
+    font-family: "Covered By Your Grace", cursive;
+    font-weight: 400;
+    font-size: 20px;
+    gap:20px
+
+}
